@@ -8,6 +8,7 @@ AV2 Changelog :: version a4.5
 * Mobs drop scrolls more often
 * Lower earth wall by pressing Middle Mouse Button
 * Air gust has 3x bigger radius
+* Rebalance air bubble health
 
 > Fix crash when killing entity without registered lang file name - FOR REAL THIS TIME
 > Fix bug where fireball keeps exploding when held on ground
